NetBSD Problem Report #48883

From www@NetBSD.org  Sun Jun  8 22:45:05 2014
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by mollari.NetBSD.org (Postfix) with ESMTP id DE401A585B
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  8 Jun 2014 22:45:04 +0000 (UTC)
Message-Id: <20140608224503.CE2B8A653E@mollari.NetBSD.org>
Date: Sun,  8 Jun 2014 22:45:03 +0000 (UTC)
From: justin@specialbusservice.com
Reply-To: justin@specialbusservice.com
To: gnats-bugs@NetBSD.org
Subject: sed update uses non portable REG_STARTEND
X-Send-Pr-Version: www-1.0

>Number:         48883
>Category:       bin
>Synopsis:       sed update uses non portable REG_STARTEND
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jun 08 22:50:00 +0000 2014
>Closed-Date:    Mon Jun 09 18:10:43 +0000 2014
>Last-Modified:  Mon Jun 09 18:10:43 +0000 2014
>Originator:     Justin Cormack
>Release:        HEAD 20140806
>Organization:
NetBSD
>Environment:
>Description:
The sed update from FreeBSD sed a couple of days ago now requires REG_STARTEND support in its regex.h to build. As this is required for cross building NetBSD, a cross build fails on a host without support, with:

#   compile  sed/misc.lo
cc -O -I/home/justin/src/obj/tooldir.Linux-3.13.0-24-generic-x86_64/include/compat -I/home/justin/src/tools/compat -DHAVE_NBTOOL_CONFIG_H=1 -D_FILE_OFFSET_BITS=64 -c -o misc.lo.o    /home/justin/src/tools/sed/../../usr.bin/sed/misc.c
mv misc.lo.o misc.lo
#   compile  sed/process.lo
cc -O -I/home/justin/src/obj/tooldir.Linux-3.13.0-24-generic-x86_64/include/compat -I/home/justin/src/tools/compat -DHAVE_NBTOOL_CONFIG_H=1 -D_FILE_OFFSET_BITS=64 -c -o process.lo.o    /home/justin/src/tools/sed/../../usr.bin/sed/process.c
/home/justin/src/tools/sed/../../usr.bin/sed/process.c: In function 'regexec_e':
/home/justin/src/tools/sed/../../usr.bin/sed/process.c:665:49: error: 'REG_STARTEND' undeclared (first use in this function)
/home/justin/src/tools/sed/../../usr.bin/sed/process.c:665:49: note: each undeclared identifier is reported only once for each function it appears in

Our man page for regex(3) says of REG_STARTEND:

This is an
extension, compatible with but not specified by IEEE Std
1003.2-1992 (``POSIX.2''), and should be used with caution
in software intended to be portable to other systems.

>How-To-Repeat:
build.sh on host without REG_STARTEND support in regex library.
>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48883 CVS commit: src/usr.bin/sed
Date: Mon, 9 Jun 2014 08:48:59 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Mon Jun  9 12:48:58 UTC 2014

 Modified Files:
 	src/usr.bin/sed: process.c

 Log Message:
 PR/48883: Justin Cormack: Cope with systems that don't provide REG_STARTEND


 To generate a diff of this commit:
 cvs rdiff -u -r1.43 -r1.44 src/usr.bin/sed/process.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Justin Cormack <justin@specialbusservice.com>
To: gnats-bugs@netbsd.org
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: PR/48883 CVS commit: src/usr.bin/sed
Date: Mon, 9 Jun 2014 18:40:50 +0100

 Thanks, this has resolved the issue, and haven't seen any other issues.

 Justin


 On Mon, Jun 9, 2014 at 1:50 PM, Christos Zoulas <christos@netbsd.org> wrote:
 > The following reply was made to PR bin/48883; it has been noted by GNATS.
 >
 > From: "Christos Zoulas" <christos@netbsd.org>
 > To: gnats-bugs@gnats.NetBSD.org
 > Cc:
 > Subject: PR/48883 CVS commit: src/usr.bin/sed
 > Date: Mon, 9 Jun 2014 08:48:59 -0400
 >
 >  Module Name:   src
 >  Committed By:  christos
 >  Date:          Mon Jun  9 12:48:58 UTC 2014
 >
 >  Modified Files:
 >         src/usr.bin/sed: process.c
 >
 >  Log Message:
 >  PR/48883: Justin Cormack: Cope with systems that don't provide REG_STARTEND
 >
 >
 >  To generate a diff of this commit:
 >  cvs rdiff -u -r1.43 -r1.44 src/usr.bin/sed/process.c
 >
 >  Please note that diffs are not public domain; they are subject to the
 >  copyright notices on the relevant files.
 >

State-Changed-From-To: open->closed
State-Changed-By: christos@NetBSD.org
State-Changed-When: Mon, 09 Jun 2014 14:10:43 -0400
State-Changed-Why:
submitter verified it works.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.