PR/48883: Justin Cormack: Cope with systems that don't provide REG_STARTEND